--- a/app/views/streams/claim.html.erb
+++ b/app/views/streams/claim.html.erb
@@ -9,6 +9,7 @@
     <%= error_message_on(@stream, :password) %>
     <p><label for="password">Password:</password> <%= password_field(:stream, :new_password) %></p>
     <p><label for="password_repeat">Again:<label> <%= password_field(:stream, :new_password_repeat) %></p>
+    <p><%= hidden_field_tag('invite_code', params[:invite_code]) %></p>
     <%= submit_tag('continue') %>
   <% end %>
 </div>
