--- a/app/views/layouts/intro.html.erb
+++ b/app/views/layouts/intro.html.erb
@@ -3,7 +3,12 @@
     <title>Kakuteru - Semantic-Web enabled Lifestreaming, Your Style.</title>
     <%= stylesheet_link_tag('html') %>
     <%= stylesheet_link_tag('intro') %>
-    <%= javascript_include_tag(:defaults) %>
+    <%#= javascript_include_tag(:defaults) %>
+    <script type="text/javascript" src="http://www.google.com/jsapi?key=<%= GOOGLE_JS_API_KEY %>"></script>
+    <script type="text/javascript">
+      google.load("prototype", "1.6.0.3");
+      google.load("scriptaculous", "1.8.2");
+    </script>
     <meta name="generator" content="<%= APPLICATION_NAME %>" />
     <meta name="robots" content="index, follow" />
     <meta name="GOOGLEBOT" content="index, follow" />
