--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,7 +19,7 @@
   </div>
 
 
-  <div class="hentry show <%= @post.tag_list.collect { |tag| "tag-#{tag}" }.join(' ') %>" rel="<%= @post.type.pluralize %>">
+  <div class="hentry show <%= @post.type %> <%= @post.tag_list.collect { |tag| "tag-#{tag.to_s.dasherize}" }.join(' ') %>" rel="<%= @post.type.pluralize %>">
     <abbr class="published hide" title="<%= @post.published_at.iso8601 %>"></abbr>
     <div class="entry-content <%= @post.type %>">
       <%= render(:partial => @post.type, :locals => {:post => @post}) %>
@@ -32,7 +32,7 @@
   <div class="related_and_tags">
     <% unless @post.tags.blank? %>
     <div class="tags">
-      <label for="tags">tags</label> <%= @post.tag_list.collect { |tag| link_to(tag, "/tag/#{tag}", :rel => 'tag directory', :class => "tag-#{tag}") }.join(', ') %>
+      <label for="tags">tags</label> <%= @post.tags.sort{ |t1,t2| t1.name <=> t2.name }.collect { |tag| link_to(tag.name, "/tag/#{tag.name}", :rel => 'tag directory', :class => "tag-#{tag.name.to_s.dasherize}") }.join(', ') %>
     </div>
     <% end %>
   </div>
@@ -42,7 +42,7 @@
       <h3>Related Content</h3>
       <ul>
         <% related_posts.each do |post| %>
-          <li>[<%= post.type %>] <%= link_to(post.caption, read_url(:id => post)) %> <!-- <%= post.num_tag_matches %> tags matched --></li>
+          <li class="with_icon <%= post.type %>"><%= link_to(post.caption, read_url(:id => post)) %> <!-- <%= post.num_tag_matches %> tags matched --></li>
         <% end %>
       </ul>
     </div>
