--- a/app/views/intro/index.html.erb
+++ b/app/views/intro/index.html.erb
@@ -39,11 +39,11 @@
         <% 
           intro = [
             [:your_style, "Lifestreaming, YOUR style"],
-            [:activity, "Your activity anywhere"],
-            [:web30_enabled, "Web 3.0 enabled"],
-            [:integration, "An integration Behemoth"],
-            [:statistics, "Activity stats"],
-            [:clusters, "Coming soon!"]
+            [:activity, "Activity all over the place"],
+            [:web30_enabled, "Web 3.0 Enabled"],
+            [:integration, "An Integration Behemoth"],
+            [:statistics, "Activity Stats"],
+            [:clusters, "Soon: Cluster Streams"]
           ]
          %>
         <% intro.each do |key_caption| 
