Exhausting fight with Rails routes, got custom domain support for kakuteru now

--- a/app/views/dashboard/_menu.html.erb
+++ b/app/views/dashboard/_menu.html.erb
@@ -11,7 +11,10 @@
   <li class="<%= current_page?(:action => :content) ? 'active' : '' %>">
     <%= link_to('Content', '/dashboard/content') %>
   </li>
+  <li class="<%= current_page?(:action => :domain) ? 'active' : '' %>">
+    <%= link_to('My domain name', '/dashboard/domain') %>
+  </li>
   <li class="<%= current_page?(:action => :account) ? 'active' : '' %>">
-    <%= link_to('Account Settings', '/dashboard/account') %>
+    <%= link_to('Account settings', '/dashboard/account') %>
   </li>
 </ul>
