--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -22,5 +22,6 @@
     <div class="page clear">
       <%= yield %>
     </div>
+    <script src="http://kakuteru.uservoice.com/pages/general/widgets/tab.js?alignment=right&amp;color=121212" type="text/javascript"></script>
   </body>
 </html>
