Added slicehost logo to Kakuteru - as a friendly gesture to those cool guys

--- a/app/views/intro/index.html.erb
+++ b/app/views/intro/index.html.erb
@@ -63,4 +63,6 @@
   <h1>About</h1>
   <p><%= link_to('Kakuteru', 'http://kakuteru.com/') %> is a part time endeavor initiated by <%= link_to('Dominiek ter Heide', 'http://dominiek.com/') %>. Kakuteru is a play-bed for new technologies and it started out because of the need to pimp up and lifestreamatize my blog. However, I think it can be much more.</p>
   <p>Kakuteru is Open Source and can be freely downloaded from <%= link_to('Github', 'http://github.com/dominiek/kakuteru/tree') %>. Kakuteru.com is a way of turning that same piece of open source into an awesome and robust service. Kakuteru embraces openness and to continue along that same mindset, I intend to make Kakuteru an Open Business. That means anyone can jump in and make Kakuteru great and profitable - with ownership in return. How am I going to accomplish this? I have no freakin' idea! So if your interested, please pop me an email @ kakuteru [ monkeytail ] dominiek.com</p>
+<small>Hosting provided by: </small><br/>
+<%= link_to(image_tag('/images/slicehost.png', :width => 100), 'http://slicehost.com/') %>
 </div>
