--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -108,10 +108,16 @@ div.page {
 
 /* Articles */
 
+.articles .inner {
+	width: 920px;
+	padding: 0 10px;
+	margin: 2em auto;	
+}
+
 .latest_article {
 	float: left;
 	width: 43%;
-	padding: 2em 2em 0 2em;
+	padding: 1em 0 0 10px;
 }
 
 .latest_article p {
@@ -121,7 +127,7 @@ div.page {
 .previous_articles {
 	float: left;
 	width: 43%;
-	padding: 2em 2em 0 2em;
+	padding: 1em 10px 0 2em;
 	border-left: 1px dashed #999;
 }
 
