--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -117,7 +117,7 @@ div.page {
 .latest_article {
 	float: left;
 	width: 43%;
-	padding: 1em 0 0 10px;
+	padding: 1em 1.5em 0 10px;
 }
 
 .latest_article p {
@@ -126,7 +126,7 @@ div.page {
 
 .previous_articles {
 	float: left;
-	width: 43%;
+	width: 48%;
 	padding: 1em 10px 0 2em;
 	border-left: 1px dashed #999;
 }
