--- a/app/views/inviter/invite.html.erb
+++ b/app/views/inviter/invite.html.erb
@@ -1,16 +1,20 @@
 
 Hey there!
 
-About two months ago you signed up for an early BETA for Kakuteru.com. You're one of 300 lucky ones to give this service it's first spin!
+About two months ago you signed up for an early BETA for http://kakuteru.com. You're one of the few lucky ones to give this service it's first spin!
 
 Personal invite code: <%= @invite.code %>
 
-Kakuteru is a fully customizable lifestreamer, that tries to ride the waves of the more interconnected and semantic web. Right now it uses FriendFeed as an aggregation backend, but it also provides custom integration like Dopplr.com for your travel schedule. 
+Get started here: http://kakuteru.com?invite_code=<%= @invite.code %>
 
-Two days ago I successfully ported over dominiek.com to the hosted version of Kakuteru (custom domain support!). I'm limiting registrations so all the bugs and quirks - including scaling the service - can be solved. Your voice is of great importance! So if anything is buggy or dumb, give a shout out on http://kakuteru.uservoice.com/.
+------------------------
+
+Kakuteru is a fully customizable lifestreamer that tries to ride the waves of the ever interconnected and semantic web. Right now it uses FriendFeed as an aggregation backend, but it also provides custom integrations like for example Dopplr.com for your travel schedule. 
+
+Two days ago I successfully ported over http://dominiek.com to the hosted version of Kakuteru (custom domain support!). For the moment I'm limiting new registrations so that all the bugs and quirks - including scaling the service - can be solved. So your voice is of great importance! If anything is buggy or idiotic, please give a shout out at http://kakuteru.uservoice.com/.
 
 Thanks!
 
-Dom
+Dominiek
 
 PS Happy holidays!
