--- a/app/views/inviter/invite.html.erb
+++ b/app/views/inviter/invite.html.erb
@@ -1,7 +1,7 @@
 
 Hey there!
 
-About two months ago you signed up for an early BETA for http://kakuteru.com. You're one of the few lucky ones to give this service it's first spin!
+About two months ago you signed up for an early BETA of http://kakuteru.com. You're one of the lucky few to give this service it's first spin!
 
 Personal invite code: <%= @invite.code %>
 
