--- a/app/views/inviter/invite.html.erb
+++ b/app/views/inviter/invite.html.erb
@@ -3,9 +3,9 @@ Hey there!
 
 About two months ago you signed up for an early BETA of http://kakuteru.com. You're one of the lucky few to give this service it's first spin!
 
-Personal invite code: <%= @invite.code %>
-
 Get started here: http://kakuteru.com?invite_code=<%= @invite.code %>
+
+( Your personal invite code is <%= @invite.code %> )
 
 ------------------------
 
