Maintenance page, just in case

--- a/app/views/layouts/intro.html.erb
+++ b/app/views/layouts/intro.html.erb
@@ -14,6 +14,7 @@
     <meta name="GOOGLEBOT" content="index, follow" />
     <meta name="MSSmartTagsPreventParsing" content="yes" />
     <meta http-equiv="expires" content="3600" />
+    <meta name="keywords" content="kakuteru, cocktail, lifestreaming, lifestreamer, semantic, life, streaming, semantic-web, integration, dopplr, friendfeed, zemanta, customizable, design, style" />
     <%= yield(:head) %>
   </head>
   
